--- a/package.json
+++ b/package.json
@@ -9,6 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ethsign/sp-sdk": "^0.3.19",
+    "@hookform/resolvers": "^3.3.4",
+    "@lighthouse-web3/sdk": "^0.3.0",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-query": "^5.29.2",
+    "@wagmi/core": "^2.6.17",
+    "@web3modal/wagmi": "^4.1.5",
+    "axios": "^1.6.8",
+    "chai": "^4.2.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "ethers": "^6.12.0",
+    "lucide-react": "^0.363.0",
+    "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.51.1",
+    "react-signature-canvas": "^1.0.6",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
+    "wagmi": "^2.5.20",
+    "zod": "^3.22.4",
+    "viem": "2.x",
     "react": "^18",
     "react-dom": "^18",
     "next": "14.2.4"
@@ -18,6 +42,9 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-signature-canvas": "^1.0.5",
+    "autoprefixer": "^10.4.17",
+    "prettier": "3.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "eslint": "^8",
